# configurator

./: .gitignore  .hgignore  .hgtags  README.markdown  configurator.cabal
Data/: Configurator.hs
Data/Configurator/: Instances.hs  Parser.hs  Types.hs
Data/Configurator/Types/: Internal.hs
tests/: Test.hs  TestLoad.hs  TestReload.hs  configurator-tests.cabal  pathological.cfg  runTests.sh
tests/resources/: import.cfg  interp.cfg  pathological.cfg
