name:            configurator
version:         0.0.0.1
license:         BSD3
license-file:    LICENSE
category:        Configuration, Data
copyright:       Copyright 2011 MailRank, Inc.
author:          Bryan O'Sullivan <bos@mailrank.com>
maintainer:      Bryan O'Sullivan <bos@mailrank.com>
stability:       experimental
tested-with:     GHC == 7.0.3
synopsis:        Configuration management
cabal-version:   >= 1.8
homepage:        http://github.com/mailrank/configurator
bug-reports:     http://github.com/mailrank/configurator/issues
build-type:      Simple
description:
  A configuration management library for programs and daemons.
  .
  Features include:
  .
  * Automatic, dynamic reloading in response to modifications to
    configuration files.
  .
  * The simple, but flexible, configuration language supports several
    of the most commonly needed types of data, along with
    interpolation of strings from the configuration or the system
    environment (e.g. @$(HOME)@).
  .
  * Use the @import@ directive to break up the configuration of a
    complex application into smaller files, or to easily share pieces
    of common configuration data across several applications.
  .
  For details of the configuration file format, see
  <http://hackage.haskell.org/packages/archive/configurator/latest/doc/html/Data-Configurator.html>.

extra-source-files:
    README.markdown
    tests/TestLoad.hs

flag developer
  description: operate in developer mode
  default: False

library
  exposed-modules:
    Data.Configurator
    Data.Configurator.Types

  other-modules:
    Data.Configurator.Instances
    Data.Configurator.Parser
    Data.Configurator.Types.Internal

  build-depends:
    attoparsec-text >= 0.8.5.0,
    base == 4.*,
    bytestring,
    directory,
    old-time,
    text >= 0.11.1.0,
    unordered-containers	

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all

  ghc-options:      -Wall

source-repository head
  type:     git
  location: http://github.com/mailrank/configurator

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/configurator
