name:            configurator
version:         0.3.0.0
license:         BSD3
license-file:    LICENSE
category:        Configuration, Data
copyright:       Copyright 2011 MailRank, Inc.
                 Copyright 2011-2014 Bryan O'Sullivan
author:          Bryan O'Sullivan <bos@serpentine.com>
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
stability:       experimental
tested-with:     GHC == 7.0, GHC == 7.2, GHC == 7.4, GHC == 7.6, GHC == 7.8
synopsis:        Configuration management
cabal-version:   >= 1.8
homepage:        http://github.com/bos/configurator
bug-reports:     http://github.com/bos/configurator/issues
build-type:      Simple
description:
  A configuration management library for programs and daemons.
  .
  Features include:
  .
  * Automatic, dynamic reloading in response to modifications to
    configuration files.
  .
  * A simple, but flexible, configuration language, supporting several
    of the most commonly needed types of data, along with
    interpolation of strings from the configuration or the system
    environment (e.g. @$(HOME)@).
  .
  * Subscription-based notification of changes to configuration
    properties.
  .
  * An @import@ directive allows the configuration of a complex
    application to be split across several smaller files, or common
    configuration data to be shared across several applications.
  .
  For details of the configuration file format, see
  <http://hackage.haskell.org/packages/archive/configurator/latest/doc/html/Data-Configurator.html>.

extra-source-files:
    README.markdown

data-files: tests/resources/*.cfg

flag developer
  description: operate in developer mode
  default: False
  manual: True

library
  exposed-modules:
    Data.Configurator
    Data.Configurator.Types

  other-modules:
    Data.Configurator.Instances
    Data.Configurator.Parser
    Data.Configurator.Types.Internal

  build-depends:
    attoparsec >= 0.10.0.2,
    base == 4.*,
    bytestring,
    directory,
    hashable,
    text >= 0.11.1.0,
    unix-compat,
    unordered-containers

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all

  ghc-options:      -Wall

source-repository head
  type:     git
  location: http://github.com/bos/configurator

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/configurator

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: tests
  build-depends:
    HUnit,
    base,
    bytestring,
    configurator,
    directory,
    filepath,
    test-framework,
    test-framework-hunit,
    text
  ghc-options: -Wall -fno-warn-unused-do-bind
